# AgentForSTS2

./: .dockerignore  .env.web.example  .env.workstation.example  .gitattributes  .gitignore  AGENTS.md  AGENTS_CODEX.md  PROJECT_SPEC.md  README.md  TUTORIAL.md  agent_code.md  config.example.json  docker-compose.web.yml  docker-compose.workstation.yml  install.bat  pyproject.toml  pytest.ini  start.bat
backend/: app_factory.py  config.py  main.py  main_web.py  main_workstation.py  project_utils.py  requirements-dev.txt  requirements.txt
backend/agents/: code_agent.py  planner.py  sts2_api_reference.md  sts2_docs.py  sts2_guidance.py
backend/approval/: action_prompt.py  executor.py  models.py  policies.py  runtime.py  service.py
backend/image/: generator.py  postprocess.py  prompt_adapter.py
backend/llm/: agent_runner.py  prompt_builder.py  stream.py  stream_metadata.py  text_runner.py
backend/migrations/: env.py
backend/routers/: __init__.py  _auth_support.py  _platform_execution_support.py  (+14 more)
docker/: Dockerfile.frontend  Dockerfile.web  Dockerfile.workstation  frontend.entrypoint.sh  frontend.nginx.conf
docs/: README.md  logic-md-index.md  refactor-verification-checklist.md  当前后端前端接口文档.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
runtime/: README.md
tools/: README.md  install.bat  install.ps1  install.sh  kill-local.ps1  setup_mod_deps.bat  setup_mod_deps.sh  start.bat  start.sh  start_dev.bat  start_split_local.bat  start_split_local.ps1  start_web.bat  start_workstation.bat  stop_split_local.bat  stop_split_local.ps1  tools.ps1  verify-install-bat.ps1
(+904 files in other folders)
